2006-01-17  Josh Stone  <joshua.i.stone@intel.com>

	* stap.1.in: Document the 'delete' operator.

2006-01-16  Roland McGrath  <roland@redhat.com>

	* systemtap.spec.in (elfutils_version): Require 0.119 now.
	* configure.ac, systemtap.spec.in: Version 0.5.3.
	* configure: Regenerated.

2006-01-16  Josh Stone  <joshua.i.stone@intel.com>

	PR 2140
	* translate.cxx (mapvar::del): Add ability to delete an indexed stat
	from (p)maps.
	(delete_statement_operand_visitor::visit_symbol): Add ability to
	delete entire pmaps and scalars.
	(delete_statement_operand_tmp_visitor): Add a special tmpvar visitor
	to parallel delete_statement_operand_visitor.
	(c_tmpcounter::visit_delete_statement): Invoke the new visitor.
	* testsuite/buildok/delete.stp: Also test scalar deletes.
	* vim/syntax/stap.vim: Recognize 'delete' operator.

2006-01-15  Frank Ch. Eigler  <fche@elastic.org>

	PR 2148
	* translate.cxx (MAXERRORS): Actually the max should be 0, so first
	error aborts session.

2006-01-13  Frank Ch. Eigler  <fche@elastic.org>

	* main.cxx (main): Suppress "Try again with -v" message if already
	verbose.

2006-01-13  Frank Ch. Eigler  <fche@elastic.org>

	* translate.cxx (c_unparser:getmap): Correct exception throwing typo.

2006-01-12  Josh Stone  <joshua.i.stone@intel.com>

	PR 2056
	* translate.cxx (c_unparser::aggregation_locks): Keeps track of
	foreach's locks on pmaps to avoid extra aggregation.
	(c_unparser::visit_foreach_loop): Set aggregation_locks appropriately.
	(c_unparser::load_aggregate, mapvar::call_prefix, mapvar::get):
	Use a new parameter to indicate that we should read from the
	already-aggregated map rather than the full pmap..
	(c_unparser::visit_arrayindex c_unparser::visit_print_format,
	c_unparser::visit_stat_op): Use aggregation_locks to avoid taking a
	lock and aggregating the pmap.
	(c_unparser::emit_map_type_instantiations): To read from a pmap's
	aggregated map, we need to include map-gen.c for the _stp_map_*
	functions.