@@ -1,3 +1,14 @@
+2006-01-17  Frank Ch. Eigler  <fche@elastic.org>
+
+	PR 2142
+	* translate.cxx (EXTRACTORS_PERMISSIVE): New experimental policy
+	parameter.
+	(c_unparser::visit_arrayindex, visit_print_format, visit_stat_op):
+	Tolerate absent index (= NULL runtime return) in pmap.
+	(*): Make semantic_error messages consistently lower case.
+	* testsuite/buildok/iterate_histogram_buckets.stp: Note some missing
+	functionality.
+
 2006-01-17  Josh Stone  <joshua.i.stone@intel.com>
 
 	* stap.1.in: Document the 'delete' operator.
